--- a/index.html
+++ b/index.html
@@ -207,12 +207,12 @@
         <!-- 홈 -->
         <div id="home" class="content-section active">
             <header>
-                <h1>[당신의 이름]</h1>
-                <p>🌸 여기는 저만의 작은 디지털 공간입니다.</p>
+                <h1>나희다이스</h1>
+                <p>나희다이스. 그것은 나희의 파라다이스.</p>
 
                 <div class="main-image-container">
                     <p style="color:#7f6ca5; font-size:0.9em;">
-                        👉 여기에 예쁜 이미지를 넣어주세요!
+                       <img src="image/main.jpeg" alt="메인 환영 이미지">
                     </p>
                 </div>
             </header>
@@ -222,7 +222,8 @@
         <div id="about" class="content-section">
             <h2>About Me</h2>
             <div class="card">
-                <p>[당신의 소개글이 들어갈 영역입니다.]<br>
+                <p>다양한 걸 시도하고 좋아합니다<br>
+                    행복하세요 저도 행복할게요<br>
                 관심사, 취향, 목표 등을 자유롭게 적어주세요! 💜</p>
             </div>
         </div>
