--- a/index.html
+++ b/index.html
@@ -218,31 +218,67 @@
             </header>
         </div>
 
-        <!-- 어바웃 -->
-        <div id="about" class="content-section">
-            <h2>About Me</h2>
-            <div class="card">
-                <p>다양한 걸 시도하고 좋아합니다<br>
-                    행복하세요 저도 행복할게요<br>
-                관심사, 취향, 목표 등을 자유롭게 적어주세요! 💜</p>
-            </div>
+       <div id="about" class="content-section">
+    <h2>💜 About Me</h2>
+    <div class="card about-card" style="text-align: center;">
+
+        <img src="image/nahee.png" alt="나희 대표 이미지" 
+             style="max-width: 150px; height: auto; border-radius: 50%; margin: 0 auto 20px auto; display: block;"> 
+        <h3 style="color: var(--text-color-dark); margin-top: 0; font-weight: 800; font-size: 1.2em;">나희</h3>
+        <p style="margin-bottom: 25px; line-height: 1.8;">
+            다양한 걸 시도하고 좋아합니다<br>
+            행복하세요 저도 행복할게요
+        </p>
+        
+        <div style="border-top: 1px dashed var(--secondary-pastel); padding-top: 20px;">
+            <h3 style="color: var(--text-color-dark); font-weight: 800; font-size: 1.2em; margin-bottom: 5px;">기본 사항</h3>
+            <p style="font-size: 0.95em; line-height: 1.8;">
+                20⬆️ 성인 상호 FUB 프리 지향<br>
+                단어뮤트/뮤트 기능 자주 쓰고 기본적으로 전 계정 리트윗 꺼둡니다. <br> 팬덤이나 트위터 플로우 모릅니다. 그냥 적당히 좋아하는 것들 얘기합니다. <br> 블락의 경우 악질 계정이 아닌 이상에야 9할 가량이 미러블락입니다.<br> <br>
+                현재는 이착헌 위주로 돌아가는 계정. <br> 그외 타장르 언급 종종 있고 일상트 많습니다. <br> 못 보는 게 많아서(공격적 언사, 욕설 등) 트친 많이 사귀지도 않고 성향상 교류를 아주 적극적으로 하지도 않습니다...
+            </p>
         </div>
+
+        <div style="border-top: 1px dashed var(--secondary-pastel); padding-top: 20px;">
+            <h3 style="color: var(--text-color-dark); font-weight: 800; font-size: 1.2em; margin-bottom: 5px;">좋아하는 것들</h3>
+            <p style="font-size: 0.95em; line-height: 1.8;">
+                현재 버닝 중: 강창호 (+창호기려)<br>
+                CP는 주로 BL 먹습니다. 논CP조합은 대부분 좋아합니다.<br> <br>
+                세포신곡: 란무테<br>
+                FGO: 크리주나, 흑주나, 비마주나<br>
+                이착헌: 창호기려<br>
+                성별 무관 ❗❗❗오시컾 좌우상대고정으로 타CP/리버스 못봅니다❗❗ 직멘만 안해주시면 알아서 피해갑니다.<br>
+                G나 폭력적 소재도 잘 못보는데 마찬가지로 알아서 피해갑니다. 이외에는 어지간하면 뭐든 괜찮아요.
+            </p>
+        </div>
+
+        <div style="border-top: 1px dashed var(--secondary-pastel); padding-top: 20px;">
+            <h3 style="color: var(--text-color-dark); font-weight: 800; font-size: 1.2em; margin-bottom: 5px;">주의사항</h3>
+            <p style="font-size: 0.95em; line-height: 1.8;">
+                서로 비꼬고 비웃고 싸우는 거 진짜완전엄청많이싫어함!!! <br> 인간 대 인간으로 예의 지키면서 님도 저도 즐겁게 덕질합시다... <br> 따로 문제가 있을 경우 완곡하게 DM이나 페잉 등으로 컨택 부탁드립니다.
+            </p>
+        </div>
+
+    </div>
+</div>
 
         <!-- 프로젝트 -->
         <div id="projects" class="content-section">
             <h2>Projects</h2>
             <div class="card-list">
                 <div class="card">
-                    <strong>[프로젝트 제목 1]</strong><br>
-                    설명: [설명 한 줄]
+                    <strong>동인 행사</strong><br>
+                    교류회, 쁘띠존, 책방 등<br>
+                  다양한 사람들이 교류하는 행사를 지향합니다.
                 </div>
                 <div class="card">
-                    <strong>[프로젝트 제목 2]</strong><br>
-                    설명: [설명 한 줄]
+                    <strong>TRPG</strong><br>
+                    시나리오 배포 등<br>
+                  단 한 명이라도 즐길 수 있는 시나리오를 목표로 합니다.
                 </div>
                 <div class="card">
-                    <strong>[학습 기록]</strong><br>
-                    [주제에 대한 학습 기록]
+                    <strong>그 외의 다양한 시도들</strong><br>
+                    재밌어 보이면 일단 시도합니다.
                 </div>
             </div>
         </div>
@@ -251,10 +287,9 @@
         <div id="links" class="content-section">
             <h2>My Links</h2>
             <div class="card-list" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
-                <div class="link-item"><a href="#">📝 Blog</a></div>
-                <div class="link-item"><a href="#">💻 GitHub</a></div>
-                <div class="link-item"><a href="mailto:#">✉️ Email</a></div>
-                <div class="link-item"><a href="#">🔗 SNS</a></div>
+                <div class="link-item"><a href="https://www.postype.com/@attkok">📝 글 포스타입</a></div>
+                <div class="link-item"><a href="https://www.postype.com/@naheerpg">💻 다목적 포스타입</a></div>
+                <div class="link-item"><a href="https://x.com/naheedice">🐦 트위터</a></div>
             </div>
         </div>
     </div>
