--- a/index.html
+++ b/index.html
@@ -206,17 +206,15 @@
 
         <!-- 홈 -->
         <div id="home" class="content-section active">
-            <header>
-                <h1>나희다이스</h1>
-                <p>나희다이스. 그것은 나희의 파라다이스.</p>
+    <header>
+        <h1>나희다이스</h1>
+        <p>나희다이스. 그것은 나희의 파라다이스.</p>
 
-                <div class="main-image-container">
-                    <p style="color:#7f6ca5; font-size:0.9em;">
-                       <img src="image/main.jpeg" alt="메인 환영 이미지">
-                    </p>
-                </div>
-            </header>
+        <div class="main-image-container">
+            <img src="image/main.jpeg" alt="메인 환영 이미지" style="max-width: 80%; height: auto; border-radius: 15px;">
         </div>
+    </header>
+</div>
 
        <div id="about" class="content-section">
     <h2>💜 About Me</h2>
