--- a/index.html
+++ b/index.html
@@ -211,8 +211,13 @@
         <p>나희다이스. 그것은 나희의 파라다이스.</p>
 
         <div class="main-image-container">
-            <img src="image/main.jpeg" alt="메인 환영 이미지" style="max-width: 80%; height: auto; border-radius: 15px;">
+            <img src="image/main.jpeg" alt="메인 환영 이미지" style="max-width: 60%; height: auto; border-radius: 15px;">
         </div>
+        
+        <p style="margin-top: 20px; font-style: italic; color: var(--text-sub); font-size: 0.95em;">
+            reality is also pizza
+        </p>
+
     </header>
 </div>
 
@@ -283,13 +288,13 @@
 
         <!-- 링크 -->
         <div id="links" class="content-section">
-            <h2>My Links</h2>
-            <div class="card-list" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
-                <div class="link-item"><a href="https://www.postype.com/@attkok">📝 글 포스타입</a></div>
-                <div class="link-item"><a href="https://www.postype.com/@naheerpg">💻 다목적 포스타입</a></div>
-                <div class="link-item"><a href="https://x.com/naheedice">🐦 트위터</a></div>
-            </div>
-        </div>
+    <h2>My Links</h2>
+    <div class="card-list" style="grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
+        <div class="link-item"><a href="https://www.postype.com/@attkok" target="_blank">📝 글 포스타입</a></div>
+        <div class="link-item"><a href="https://www.postype.com/@naheerpg" target="_blank">💻 다목적 포스타입</a></div>
+        <div class="link-item"><a href="https://x.com/naheedice" target="_blank">🐦 트위터</a></div>
+    </div>
+    </div>
     </div>
 
     <script>
