--- a/index.html
+++ b/index.html
@@ -210,9 +210,8 @@
         <h1>나희다이스</h1>
         <p>나희다이스. 그것은 나희의 파라다이스.</p>
 
-        <div class="main-image-container">
-            <img src="image/main.jpeg" alt="메인 환영 이미지" style="max-width: 60%; height: auto; border-radius: 15px;">
-        </div>
+        <img src="image/main.jpeg" alt="메인 환영 이미지" 
+             style="max-width: 60%; height: auto; border-radius: 15px; margin: 28px auto 0 auto; display: block;">
         
         <p style="margin-top: 20px; font-style: italic; color: var(--text-sub); font-size: 0.95em;">
             reality is also pizza
@@ -250,7 +249,7 @@
                 세포신곡: 란무테<br>
                 FGO: 크리주나, 흑주나, 비마주나<br>
                 이착헌: 창호기려<br>
-                성별 무관 ❗❗❗오시컾 좌우상대고정으로 타CP/리버스 못봅니다❗❗ 직멘만 안해주시면 알아서 피해갑니다.<br>
+                성별 무관 ❗❗❗오시CP 좌우상대고정으로 타CP/리버스 못봅니다❗❗ 직멘만 안해주시면 알아서 피해갑니다.<br>
                 G나 폭력적 소재도 잘 못보는데 마찬가지로 알아서 피해갑니다. 이외에는 어지간하면 뭐든 괜찮아요.
             </p>
         </div>
